# studpid-bot

./: .gitignore  .gitmodules  README.md  config.py  console.py  main.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  tm.py
.github/workflows/: linux.yml  windows.yml
Commands/: add_commands.py  basic.py  mod_commands.py  polls.py  slash_shop.py
Variables/: vars.py
bases_750708076029673493/: 750708076029673493_shop.db
bases_863462268402532363/: 863462268402532363_shop.db
bases_934139154290339881/: 934139154290339881_shop.db
bases_992168500258947184/: 992168500258947184_store.db
bases_992573047682908262/: 992573047682908262_store.db
commands/: add_commands.py  basic.py  event_handl.py  event_handler.py  m_commands.py  mod_commands.py  polls.py  slash_shop.py  slash_shop_r.py  sms.txt
old_and_other_stuff/: test.py  ubuntu_test.py
old_and_other_stuff/ver 1/: basic.py  console.py  shop.py  slash_shop.py
old_and_other_stuff/ver 2/: basic.py  console.py  slash_shop.py
storebot/: __main__.py  config.py  config_example.py  console.py  constants.py  cython_setup.py  db_commands.py  requirements-dev.txt  requirements.txt  requirements_dev.txt  storebot.py  tmp.py  tmp.txt
storebot/Cogs/: add_cmds_cog.py  debug_cmds_cog.py  event_handler.py  members_handler.py  mod_cmds_cog.py  openai_cog.py  polls_cog.py  slash_cmds_cog.py  text_cmds_cog.py  voice_handler.py
storebot/Commands/: add_commands.py  basic.py  event_handler.py  members_handler.py  mod_commands.py  polls.py  (+4 more)
tests/: builder.py  dummy_variables.py  test_commands.py
(+46 files in other folders)
