[metadata]
name = storebot
license = GPL-3.0 license
license_files = LICENSE
platforms = linux, win32
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = storebot
install_requires =
    wheel
    nextcord>=2.4.0
    emoji
    cython
    nextcord[speed]
    nextcord[voice]
    aiosqlite
    aiofiles
    openai
requires_python = >=3.11
package_dir =
    =.
zip_safe = no

[options.package_data]
storebot =
    *.pyd

[options.packages.find]
exclude =
    *.c
    *.pyx
    cython_setup.py